--- a/templates/base.loginregister.html.twig
+++ b/templates/base.loginregister.html.twig
@@ -48,9 +48,7 @@
             </div>
         </li>
         <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
-        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li>
-        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_register') }}" aria-expanded="false">Register</a></li>
-        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_login') }}" aria-expanded="false">Login</a></li></ul>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li></ul>
 
         <!-- NAVBAR ITEMS END -->
 
@@ -105,9 +103,7 @@
                         </div>
                     </li>
                     <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
-                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li>
-                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_register') }}" aria-expanded="false">Register</a></li>
-                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_login') }}" aria-expanded="false">Login</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li></ul>
 
                 <!-- NAVBAR ITEMS END -->
                 <!-- SOCIAL ICON -->
@@ -145,200 +141,9 @@
     <!-- </div> -->
 </section>
 
-<section class="header1 cid-s0bsc2KgEB" id="header01-1">
-    
-    
-    <div class="container-fluid mbr-white">
-        <div class="mbr-row">
-            <div class="mbr-col-lg-5 mbr-col-md-12 mbr-m-auto mbr-col-sm-12 md-pb">
-                <div class="content">
-                    
-                    <h1 class="mbr-section-title mbr-fonts-style align-left mbr-pb-2 display-1">Sunglasses Shop</h1>
-                    <p class="mbr-fonts-style mbr-text align-left mbr-pb-5  display-7">Unique glasses for a new era
-                        of fashion.</p>
-                    <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="19" height="19"><path d="M24 11l-6.7 6.7-1.4-1.4 4.3-4.3H0v-2h20.2l-4.3-4.3 1.4-1.4L24 11z"></path></svg></span>Discover</a>
-                    </div>
-                </div>
-            </div>
-            <div class="mbr-col-lg-7 mbr-col-md-12 img-col mbr-m-auto mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/01.jpg') }}" alt="" width="1099.8670212765958" height="919" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
-        {% block body %}{% endblock %}
+{% block body %} {% endblock %}
 
-        <section class="clients1 cid-s0bsyNmprb" id="clients01-9">
-
-    
-    <div class="container">
-        <div class="mbr-row mbr-jc-c">
-            <div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
-                <h3 class="mbr-section-subtitle mbr-black mbr-fonts-style mbr-pb-5 align-left display-5">Seen on
-                    Press</h3>
-                <p class="mbr-fonts-style mbr-text align-left mbr-pb-3 display-5">"Lorem ipsum dolor sit amet consectetur adipiscing
-                    commodo suscipit"</p>
-            </div>
-
-         <div class="line"></div>
-
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/1.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/2.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/3.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/4.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/5.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/1.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/2.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/3.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/4.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="{{ asset('assets/img/5.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-</section>
 
 <section class="form footer2 cid-s0bsukEenN" id="footer02-7">
     
